# esq

./: .gitignore  ESQ.py  LICENSE  README.md  __init__.py  pyproject.toml
.github/scripts/: get_set_version_tag  write_repo.py
.github/workflows/: generate_repo.yaml  publish_local.yaml  publish_pypi.yaml  release.yaml
buildscript/: next_version.py  requirements.txt  tag_version.py  write_repo.py
src/fleb.esq/: __init__.py
