[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "fleb.esq"
keywords = ["ANSI", "VT100", "color", "terminal"]
authors = [
  { name="FLEB (a.k.a. SuperFLEB)" },
]
description = "Escape SeQuence Generator: Another ANSI escape-code tool"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT-0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/SuperFLEB/esq"
Source = "https://github.com/SuperFLEB/esq"
Issues = "https://github.com/SuperFLEB/esq/issues"
Author = "https://flebsite.com"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
